# carbonbot

./: .gitattributes  Cargo.toml  Dockerfile  README.md
conf/: clear_pm2_logs.sh  compress.sh  rclone.conf  run_crawlers.sh  upload.sh
conf/logrotate/: logrotate.bbo.conf  logrotate.candlestick.conf  logrotate.funding_rate.conf  logrotate.l2_event.conf  logrotate.l2_snapshot.conf  logrotate.l2_topk.conf  logrotate.l3_event.conf  logrotate.open_interest.conf  logrotate.other.conf  logrotate.ticker.conf  logrotate.trade.conf
conf/pm2/: pm2.bbo.config.js  pm2.candlestick.config.js  pm2.funding_rate.config.js  pm2.l2_event.config.js  pm2.l2_snapshot.config.js  pm2.l2_topk.config.js  pm2.l3_event.config.js  pm2.open_interest.config.js  pm2.other.config.js  pm2.ticker.config.js  pm2.trade.config.js
src/: main.rs
src/misc_crawlers/: mod.rs  okx.rs
src/writers/: file_writer.rs  mod.rs
