[package]
name = "carbonbot"
version = "2.12.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "4.6.8"
crypto-market-type = "1.1.3"
crypto-msg-type = "1.0.10"
crypto-ws-client = "4.12.5"
once_cell = "1.13.1"
redis = "0.21.5"
reopen = { version = "1.0.3", features = ["signals"] }
serde_json = "1.0.85"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level="z"
