[package]
name = "carbonbot"
version = "2.12.3"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "4.7.2"
crypto-market-type = "1.1.5"
crypto-msg-type = "1.0.11"
crypto-ws-client = "4.12.8"
once_cell = "1.16.0"
redis = "0.22.1"
reopen = { version = "1.0.3", features = ["signals"] }
serde_json = "1.0.87"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
log = "0.4.17"
env_logger = "0.9.3"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level="z"
